--- a/style.css
+++ b/style.css
@@ -233,31 +233,11 @@ body {
 }
 
 
-.stars {
-    width: 100%;
-    padding: 20px 10px;
-    display: flex;
-    flex-wrap: wrap;
+.bgImage{
     position: absolute;
     top: 0px;
-}
-
-.starItems {
-    width: 0.5px;
-    height: 0.5px;
-    /* box-shadow: 0px 0px 30px 2.5px white; */
-    background-color: white;
-    margin: 30px;
-    animation: starsGlow 1s 0s infinite linear;
-}
-
-@keyframes starsGlow {
-    0%{
-        box-shadow: none;
-
-    }
-
-    100% {
-        box-shadow: 0px 0px 5px 0.2px white;;
-    }
+    opacity: 0.3;
+    z-index: -1;
+    width: 100vw;
+    height: 100vh;
 }
